<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.helloworldhome.android.swtichme.MainActivity" >

    <item
        android:id="@+id/action_red"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/red"/>
    <item
        android:id="@+id/action_green"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/green"/>
    <item
        android:id="@+id/action_blue"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/blue"/>
    
    <item
        android:id="@+id/action_next_page"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/next_page"/>

</menu>
