<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.helloworldhome.android.switchme.MainActivity" >

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:background="@color/backgournd"
        android:gravity="center"
        android:height="100dp"
        android:text="@string/hello_world"
        android:textColor="@color/font"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green" />

    <Button
        android:id="@+id/button_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue" />

    <Button
        android:id="@+id/button_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red" />

    <Button
        android:id="@+id/button_next_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/next_page" />

</LinearLayout>